--- a/views/profile.jade
+++ b/views/profile.jade
@@ -30,13 +30,10 @@ block content
   mixin messageForm('profile', 'Write a message to @' + username, '@' + username + ' ', 'Post')
 
   section
-    ol.tabs
-      li.user-posts.selected(data-url='/user/posts/#{user.id}', tabindex='0')
-        a(href='javascript:;', title='Recent') Recent
-      li.user-mentions(data-url='/user/mentions/#{user.id}', tabindex='0')
-        a(href='javascript:;', title='Mentions') Mentions
-      li.user-starred(data-url='/user/starred/#{user.id}', tabindex='0')
-        a(href='javascript:;', title='Starred') Starred
+    .tabs
+      a.user-posts.selected(data-url='/user/posts/#{user.id}', href='javascript:;', title='Recent') Recent
+      a.user-mentions(data-url='/user/mentions/#{user.id}', href='javascript:;', title='Mentions') Mentions
+      a.user-starred(data-url='/user/starred/#{user.id}', href='javascript:;', title='Starred') Starred
 
     ol#unread-messages
       h2
