--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -577,22 +577,18 @@ ol.messages #paginated.loading {
 }
 
 #profile .followers, #profile .following {
-    cursor: pointer;
+    color: #ccc;
     display: block;
     float: left;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 10px 0;
+    text-decoration: none;
+    width: 50%;
 }
 
 #profile .followers:hover, #profile .following:hover {
     color: #20c2c0;
-}
-
-#profile .user-info h3 {
-    color: #ccc;
-    float: left;
-    font-size: 20px;
-    line-height: 30px;
-    margin-bottom: 10px;
-    width: 50%;
 }
 
 #profile .user-info h3.small {
@@ -792,11 +788,13 @@ a.tabs a, .action-buttons a {
     text-transform: uppercase;
 }
 
-.action-buttons li {
+.action-buttons a {
     background-color: #7edddc;
     border-radius: 5px;
     color: #348988;
+    display: block;
     padding: 5px 12px;
+    text-decoration: none;
     text-shadow: none;
 }
 
@@ -809,8 +807,7 @@ a.tabs a, .action-buttons a {
     color: #888;
 }
 
-.tabs a:hover, .action-buttons a:hover,
-.tabs a:focus, .action-buttons a:focus {
+.tabs a:hover, .action-buttons a:hover {
     background-color: #111;
     color: #eee;
 }
