--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,20 @@ html
   body(data-url='#{url}', data-username='#{loggedUsername}', data-sessionid='#{loggedInId}', class='#{mediaOn} #{highContrast}', data-charlimit='#{charLimit}')
     #hush
 
+    #map-menu
+      h2 Keyboard Shortcut Reference
+      ul
+        li ESC (close overlay / this menu too!)
+        li k (move up feed)
+        li j (move down feed)
+        li t (open thread)
+        li s (star post)
+        li r (reply to post)
+        li p (repost)
+        li q (quote)
+      .tag
+        a(href='javascript:;', id='menu-toggle', title='Keyboard Shortcuts') ?
+
     header
       a.home(href='/') NoodleApp
 
