restored delete button; added delete shortcut

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,6 +40,9 @@ html
         li r (reply to post)
         li p (repost)
         li q (quote)
+        li d (delete your post)
+        li f (follow user at selected post)
+        li u (unfollow user at selected post)
       .tag
         a(href='javascript:;', id='menu-toggle', title='Keyboard Shortcuts') ?
 
