--- a/views/layout.jade
+++ b/views/layout.jade
@@ -49,6 +49,8 @@ html
     header
       a.home(href='/') NoodleApp
 
+      block tabs
+
       if session
         a(href='/logout', id='logout', title='Sign out') Log out
         a(href='#', id='settings-link', title='Settings') Settings
