--- a/views/profile.jade
+++ b/views/profile.jade
@@ -1,5 +1,11 @@
 extend layout
 
+block tabs
+  .tabs.long
+    a.user-posts.selected(data-url='/user/posts/#{user.id}', href='javascript:;', title='Recent') Recent
+    a.user-mentions(data-url='/user/mentions/#{user.id}', href='javascript:;', title='Mentions') Mentions
+    a.user-starred(data-url='/user/starred/#{user.id}', href='javascript:;', title='Starred') Starred
+
 block content
   #profile(style='background-image: url(#{user.cover_image.url});')
     img(src='#{user.avatar_image.url}')
@@ -30,11 +36,6 @@ block content
   mixin messageForm('profile', 'Write a message to @' + username, '@' + username + ' ', 'Post')
 
   section
-    .tabs
-      a.user-posts.selected(data-url='/user/posts/#{user.id}', href='javascript:;', title='Recent') Recent
-      a.user-mentions(data-url='/user/mentions/#{user.id}', href='javascript:;', title='Mentions') Mentions
-      a.user-starred(data-url='/user/starred/#{user.id}', href='javascript:;', title='Starred') Starred
-
     ol#unread-messages
       h2
       ol
