--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1661,8 +1661,11 @@ img.hush {
     }
 
     .write textarea {
-        margin-top: 20px;
         width: 260px;
+    }
+
+    #overlay .write textarea {
+        margin-top: 20px;
     }
 
     .write textarea.on {
