hide overlay only when not on the initial feed load

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extend layout
 
 block tabs
   .tabs
-    a.my-feed.selected(data-url='/my/feed', href='javascript:;', title='My Feed') My Feed
+    a.my-feed.selected(data-url='/my/feed', href='javascript:;', title='My Feed', class='initial') My Feed
     a.user-mentions(data-url='/user/mentions/#{session.id}', href='javascript:;', title='Mentions') Mentions
     a.user-interactions(data-url='/user/interactions/#{session.id}', href='javascript:;', title='Interact') Interact
     a.global-feed(data-url='/global/feed', href='javascript:;', title='Global') Global
