--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,6 +34,7 @@ html
         h2 Keyboard Shortcut Reference
         ul
           li ESC (close overlay / this menu too!)
+          li cmd+enter or ctrl+enter (post a message)
           li k (move up feed)
           li j (move down feed)
           li t (open thread)
