focus on esc; n for new post

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,7 @@ html
         ul
           li ESC (close overlay / this menu too!)
           li cmd+enter or ctrl+enter (post a message)
+          li n (start a new post)
           li k (move up feed)
           li j (move down feed)
           li t (open thread)
